// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAddSourceApi should attempt an api call to add sources: apiCall 1`] = `
[
  [
    "/api/v1/sources/",
    {
      "name": "Lorem",
    },
  ],
]
`;

exports[`useAddSourceApi should handle errors while attempting to add a source: addSources, alert error 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.title",
  {
    "context": "add-source_hidden_error",
    "name": "Lorem",
    "message": "Unknown error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useAddSourceApi should handle errors while attempting to add a source: addSources, error 1`] = `
{
  "isAxiosError": true,
  "message": "Mock error",
}
`;

exports[`useAddSourceApi should handle success while attempting to add a source: addSources, success 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "add-source_hidden",
    "name": "Lorem"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useDeleteSourceApi should attempt an api call to delete sources: apiCall 1`] = `
[
  [
    "/api/v1/sources/bulk_delete/",
    {
      "ids": [
        456,
        789,
      ],
    },
  ],
]
`;

exports[`useDeleteSourceApi should handle errors while attempting to delete single and multiple sources: deleteSources, error 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source_error",
    "count": 1,
    "name": "lorem ipsum dolor sit",
    "message": "Mock error"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source_error",
    "count": 2,
    "name": "lorem ipsum, dolor sit",
    "message": "Mock error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteSourceApi should handle success while attempting to delete single and multiple sources: deleteSources, success 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source",
    "count": 1,
    "name": "lorem ipsum dolor sit"
  }
])",
      "variant": "success",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source",
    "count": 2,
    "name": "lorem ipsum, dolor sit"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useDeleteSourceApi should process an API error response: callbackError 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Lorem ipsum"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Dolor sit"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Amet"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Unknown error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteSourceApi should process an API success response: callbackSuccess 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "skipped-source",
    "name": "Lorem, Ipsum",
    "count": 2
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-sources-skipped-sources",
    "deleted_names": "Ipsum",
    "skipped_names": "Lorem",
    "count": 1
  }
])",
      "variant": "warning",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-source",
    "count": 2,
    "name": "Lorem, Ipsum"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useEditSourceApi should attempt an api call to edit sources: apiCall 1`] = `
[
  [
    "/api/v1/sources/123/",
    {
      "id": 123,
      "name": "Lorem",
    },
  ],
]
`;

exports[`useEditSourceApi should handle errors while attempting to edit a source: editSources, alert error 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.title",
  {
    "context": "add-source_hidden_error_edit",
    "name": "Lorem",
    "message": "Unknown error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useEditSourceApi should handle errors while attempting to edit a source: editSources, error 1`] = `
{
  "isAxiosError": true,
  "message": "Mock error",
}
`;

exports[`useEditSourceApi should handle success while attempting to edit a source: editSources, success 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "add-source_hidden_edit",
    "name": "Lorem"
  }
])",
      "variant": "success",
    },
  ],
]
`;
